--- a/index.html
+++ b/index.html
@@ -278,10 +278,11 @@
 <!-- Nosotros Section -->
 <section id="nosotros">
   <div class="nosotros-container">
-    <img src="https://via.placeholder.com/400x400" alt="Fundador Mente Pyme">
+    <!-- Foto del fundador y CEO de Mente Pyme -->
+    <img src="foto-matias-canevaro.jpeg" alt="Matías Canevaro, fundador y CEO de Mente Pyme">
     <div class="texto">
       <h2>Quiénes Somos</h2>
-      <p>Soy [Tu nombre], fundador de Mente Pyme. Ayudo a pequeñas y medianas empresas a optimizar sus procesos, reducir costos y vender más, basándome en datos reales y estrategias personalizadas.</p>
+      <p>Soy Matías Canevaro, fundador y CEO de Mente Pyme. Ayudo a pequeñas y medianas empresas a optimizar sus procesos, reducir costos y aumentar sus ventas, basándome en datos reales y estrategias personalizadas.</p>
     </div>
   </div>
 </section>
