--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 <section id="contacto" class="contacto">
   <h2>Contacto</h2>
   <p>Completá el formulario y te contactaremos en menos de 24 horas.</p>
-  <form>
+  <form action="mailto:mentepyme@gmail.com?subject=Contacto%20Mente%20Pyme" method="POST" enctype="text/plain">
     <input type="text" placeholder="Nombre" required>
     <input type="email" placeholder="Email" required>
     <input type="tel" placeholder="WhatsApp">
