Fix image paths for services section and hero background

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   .hero {
     height: 80vh;
     /* Add a dark overlay over a locally stored background image to create depth */
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/hero-bg.png') center/cover no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('hero-bg.png') center/cover no-repeat;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -260,17 +260,17 @@
   <h2>Nuestros Servicios</h2>
   <div class="services-grid">
     <div class="service">
-      <img src="images/data-analysis.png" alt="Análisis de Datos" />
+      <img src="data-analysis.png" alt="Análisis de Datos" />
       <h3>Análisis de Datos</h3>
       <p>Transformamos tus números en decisiones claras con tableros e indicadores.</p>
     </div>
     <div class="service">
-      <img src="images/automation.png" alt="Automatización" />
+      <img src="automation.png" alt="Automatización" />
       <h3>Automatización</h3>
       <p>Implementamos herramientas para ahorrar tiempo y reducir errores.</p>
     </div>
     <div class="service">
-      <img src="images/marketing.png" alt="Marketing Rentable" />
+      <img src="marketing.png" alt="Marketing Rentable" />
       <h3>Marketing Rentable</h3>
       <p>Creamos campañas que convierten y generan retorno real.</p>
     </div>
