Update testimonial name and replace images for Automatización and Marketing Rentable

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
   <h2>Testimonios</h2>
   <div class="testimonial">
     <p>Gracias a Mente Pyme, redujimos nuestros costos en un 25% en tres meses.</p>
-    <span>– Juan Pérez, Panadería La Espiga</span>
+    <span>– Camilo Suárez, Panadería La Espiga</span>
   </div>
   <div class="testimonial">
     <p>Nuestro marketing online se triplicó gracias a sus estrategias efectivas.</p>
