Fix service images caching by adding cache-busting query parameters

--- a/index.html
+++ b/index.html
@@ -265,12 +265,14 @@
       <p>Transformamos tus números en decisiones claras con tableros e indicadores.</p>
     </div>
     <div class="service">
-      <img src="automation.png" alt="Automatización" />
+      <!-- Added cache-busting query parameter v=1 to ensure updated image is loaded -->
+      <img src="automation.png?v=1" alt="Automatización" />
       <h3>Automatización</h3>
       <p>Implementamos herramientas para ahorrar tiempo y reducir errores.</p>
     </div>
     <div class="service">
-      <img src="marketing.png" alt="Marketing Rentable" />
+      <!-- Added cache-busting query parameter v=1 to ensure updated image is loaded -->
+      <img src="marketing.png?v=1" alt="Marketing Rentable" />
       <h3>Marketing Rentable</h3>
       <p>Creamos campañas que convierten y generan retorno real.</p>
     </div>
