--- a/index.html
+++ b/index.html
@@ -286,7 +286,9 @@
     <img src="foto-matias-canevaro.jpeg" alt="Matías Canevaro, fundador y CEO de Mente Pyme">
     <div class="texto">
       <h2>Quiénes Somos</h2>
-      <p>Soy Matías Canevaro, fundador y CEO de Mente Pyme. Ayudo a pequeñas y medianas empresas a optimizar sus procesos, reducir costos y aumentar sus ventas, basándome en datos reales y estrategias personalizadas.</p>
+      <p>Soy Matías Canevaro, fundador y CEO de Mente Pyme.
+En Mente Pyme ayudamos a pequeñas y medianas empresas a transformar sus operaciones mediante soluciones estratégicas y basadas en datos. Nos especializamos en optimizar procesos, reducir costos y maximizar el rendimiento comercial, asegurando un crecimiento sostenible y competitivo.
+Nuestra metodología combina análisis profundo, innovación tecnológica y estrategias adaptadas a cada cliente, garantizando resultados concretos y medibles.</p>
     </div>
   </div>
 </section>
@@ -316,7 +318,7 @@
     <textarea placeholder="Mensaje" rows="5"></textarea>
     <input type="submit" value="Enviar">
   </form>
-  <p>O escribinos directamente por <a href="https://wa.me/5492600000000" target="_blank" style="color: var(--primary);">WhatsApp</a></p>
+  <p>O escribinos directamente por <a href="https://wa.me/5492634847987" target="_blank" style="color: var(--primary);">WhatsApp</a></p>
 </section>
 
 <!-- Footer -->
